--- a/apps/slacking/.gitignore
+++ b/apps/slacking/.gitignore
@@ -19,5 +19,6 @@ erl_crash.dump
 # Also ignore archive artifacts (built via "mix archive.build").
 *.ez
 
-.elixir_ls/
-*secret.exs
+# Ignore package tarball (built via "mix hex.build").
+slacking-*.tar
+
